#2 Fixed fotter overlapping issue and added content in modal boxes of spotpix and developers

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -9,7 +9,7 @@ footer {
   .container {
     font-size:0.8em;
     border-top: 3px solid black;
-    padding-top: 12px;
+    padding-top: 16px;
   }
 }
 
